integration-tests/src/test/resources/traefik/traefik-ingress-rules-exporter.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: @domain1uid@-cluster1-traefik-pathrouting
  namespace: @NS@
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/wls-exporter`)
      services:
        - kind: Service
          name: @domain1uid@-cluster-cluster-1
          namespace: @NS@
          port: 8001
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: @domain1uid@-cluster2-traefik-pathrouting
  namespace: @NS@
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/wls-exporter`)
      services:
        - kind: Service
          name: @domain1uid@-cluster-cluster-2
          namespace: @NS@
          port: 8001
