integration-tests/src/test/resources/traefik/traefik-ingress-rules-monitoring.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: @servicename@-traefik-pathrouting
  namespace: @NS@
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      services:
        - kind: Service
          name: @servicename@
          namespace: @NS@
          port: 80
