integration-tests/src/test/resources/traefik/traefik-ingress-rules-remoteconsole.yaml
# Copyright (c) 2021, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: @domain1uid@-traefik-pathrouting
  namespace: @NS@
spec:
  routes:
  - kind: Rule
    match: PathPrefix(`/domain1`)
    middlewares:
    - name: middleware-domain1
      namespace: @NS@
    services:
    - kind: Service
      name: @domain1uid@-cluster-cluster-1
      port: 8001
  - kind: Rule
    match: PathPrefix(`/console`)
    services:
    - kind: Service
      name: @domain1uid@-admin-server
      namespace: @NS@
      port: 7001
  - kind: Rule
    match: PathPrefix(`/`)
    services:
    - kind: Service
      name: @domain1uid@-admin-server
      namespace: @NS@
      port: 7001
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-domain1
  namespace: @NS@
spec:
  replacePathRegex:
    regex: ^/domain1(.*)
    replacement: /$1
