integration-tests/src/test/resources/traefik/traefik-ingress-rules-stickysession.yaml
# Copyright (c) 2020, 2021, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: @domain1uid@-http-ingress-rule
  namespace: @NS@
spec:
  routes:
    - kind: Rule
      match: Host(`@domain1uid@.@NS@.cluster-1.test`)
      services:
        - kind: Service
          name: @domain1uid@-cluster-cluster-1
          port: 8001
          sticky:
            cookie:
              httpOnly: true
